[gd_scene load_steps=7 format=3 uid="uid://cp40gedryufuv"]

[ext_resource type="LabelSettings" uid="uid://c2070td87y5md" path="res://GL_WHITE.tres" id="1_4vtc6"]
[ext_resource type="Script" path="res://hud/hud.gd" id="1_xt7qb"]
[ext_resource type="Texture2D" uid="uid://dkqoa235h2odu" path="res://assets/items/pixel heart 2.png" id="2_n2xbs"]
[ext_resource type="LabelSettings" uid="uid://bxdj14vtyqust" path="res://LG_64.tres" id="3_p0rl8"]
[ext_resource type="LabelSettings" uid="uid://drtdc1dkrjs35" path="res://LG_24_sub_title.tres" id="4_mvoxp"]
[ext_resource type="AudioStream" uid="uid://bp30odud7edgf" path="res://assets/sound/game_over.ogg" id="6_fknda"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xt7qb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SCORE: 0"
label_settings = ExtResource("1_4vtc6")
vertical_alignment = 1

[node name="HBoxHearts" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L4" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L5" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L6" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L7" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L8" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L9" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="L10" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxHearts"]
layout_mode = 2
texture = ExtResource("2_n2xbs")
stretch_mode = 3

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00784314, 0.113725, 0.745098)

[node name="VBoxLevelComplete" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelCompleteLabel" type="Label" parent="VBoxLevelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE!"
label_settings = ExtResource("3_p0rl8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelCompleteLabel2" type="Label" parent="VBoxLevelComplete"]
layout_mode = 2
text = "PRESS SPACE FOR NEXT LEVEL"
label_settings = ExtResource("4_mvoxp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxGameOver" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelCompleteLabel" type="Label" parent="VBoxGameOver"]
layout_mode = 2
text = "GAME OVER"
label_settings = ExtResource("3_p0rl8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelCompleteLabel2" type="Label" parent="VBoxGameOver"]
layout_mode = 2
text = "PRESS SPACE FOR MAIN MENU"
label_settings = ExtResource("4_mvoxp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fknda")

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
